add some fix on mobile ver

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
 			</div>
 		</section>
 		<section class="section">
-			<div class="content-section">
+			<div class="content-section" data-color="beige">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 order-md-0 order-1">
@@ -198,7 +198,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-5.jpg" class="gallery-section__image" data-fancybox="gallery"
+								<a href="./images/section-images/section-image-5.jpg" class="gallery-section__image" data-fancybox="gallery-1"
 									data-caption="My caption">
 									<img src="images/section-images/section-image-5.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
@@ -214,7 +214,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-6.jpg" class="gallery-section__image" data-fancybox="gallery"
+								<a href="./images/section-images/section-image-6.jpg" class="gallery-section__image" data-fancybox="gallery-2"
 									data-caption="My caption">
 									<img src="images/section-images/section-image-6.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
@@ -316,6 +316,16 @@
 			</div>
 		</div>
 	</div>
+	</div>
+
+	<div class="gallery-images">
+		<a href="./images/gallery-1/ABB_0019.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0048.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0058.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0091.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3825.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3886.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3897.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
 	</div>
 
 	<!--build:js js/main.min.js -->
