--- a/app/index.html
+++ b/app/index.html
@@ -83,11 +83,13 @@
 			<div class="content-section" data-color="beige">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6 order-md-0 order-1">
+						<div class="col-12">
 							<div class="title-section">
 								<h1>Сотрудничество</h1>
 								<span class="title-section__number">01</span>
 							</div>
+						</div>
+						<div class="col-md-6 order-md-0 order-1">
 							<div class="description-section">
 								<p><span>Приглашаем к сотрудничеству</span> ценителей изящных и прекрасных свадебных
 									платьев. Наши образы никого не оставят равнодушным.</p>
@@ -97,7 +99,7 @@
 						</div>
 						<div class="col-md-6">
 							<a href="./images/section-images/section-image-1.jpg" id="test-1"
-							class="gallery-section__image" data-fancybox="images" data-caption="My caption">
+								class="gallery-section__image" data-fancybox="images" data-caption="My caption">
 								<img src="images/section-images/section-image-1.jpg" alt="section-image-1">
 								<button class="button button-preview">Смотреть</button>
 							</a>
@@ -105,7 +107,8 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-2.jpg" class="gallery-section__image" data-fancybox="images" data-caption="My caption">
+							<a href="./images/section-images/section-image-2.jpg" class="gallery-section__image"
+								data-fancybox="images" data-caption="My caption">
 								<img src="images/section-images/section-image-2.jpg" alt="section-image-2">
 								<button class="button button-preview">Смотреть</button>
 							</a>
@@ -113,17 +116,17 @@
 						<div class="col-md-6">
 							<div class="description-section">
 								<p>Приглашаем к сотрудничеству Своим компаньонам мы предоставляем рекламные материалы, а
-								для самых активных предлагаем <span>гибкую систему скидок.</span></p>
+									для самых активных предлагаем <span>гибкую систему скидок.</span></p>
 								<p>Вся продукция <span>изготавливается строго в срок</span> и отправляется заказчикам
-								<span>наиболее удобным и оперативным способом</span></p>
+									<span>наиболее удобным и оперативным способом</span></p>
 								<p>Благодаря нашему опыту и компетенции, мы <span>выполняем даже самые трудоемкие и
-								сложные заказы.</span></p>
+										сложные заказы.</span></p>
 							</div>
 							<div class="buttons">
 								<button class="button button__transperant" data-toggle="modal"
-										data-target="#exampleModal"  data-color="blue">подбор модели</button>
-								<button class="button button__blue" data-toggle="modal"
-										data-target="#exampleModal-2" data-color="blue">оставить заявку</button>
+									data-target="#exampleModal" data-color="blue">подбор модели</button>
+								<button class="button button__blue" data-toggle="modal" data-target="#exampleModal-2"
+									data-color="blue">оставить заявку</button>
 							</div>
 						</div>
 					</div>
@@ -134,11 +137,13 @@
 			<div class="content-section" data-color="blue">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6 order-md-0 order-1">
+						<div class="col-12">
 							<div class="title-section">
 								<h1>Сотрудничество</h1>
 								<span class="title-section__number">02</span>
 							</div>
+						</div>
+						<div class="col-md-6 order-md-0 order-1">
 							<div class="description-section">
 								<p><span>«Sapfir Couture»</span> – производитель свадебных платьев восточного стиля.</p>
 								<p>Более <span>10 лет </span>мы участвуем в выставках мирового уровня, а именно:
@@ -146,8 +151,8 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-3.jpg" class="gallery-section__image" data-fancybox="images"
-								data-caption="My caption">
+							<a href="./images/section-images/section-image-3.jpg" class="gallery-section__image"
+								data-fancybox="images" data-caption="My caption">
 								<img src="images/section-images/section-image-3.jpg" alt="section-image-3">
 								<button class="button button-preview">Смотреть</button>
 							</a>
@@ -155,8 +160,8 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-4.jpg" class="gallery-section__image" data-fancybox="images"
-								data-caption="My caption">
+							<a href="./images/section-images/section-image-4.jpg" class="gallery-section__image"
+								data-fancybox="images" data-caption="My caption">
 								<img src="images/section-images/section-image-4.jpg" alt="section-image-3">
 								<button class="button button-preview">Смотреть</button>
 							</a>
@@ -174,11 +179,11 @@
 								</p>
 							</div>
 							<div class="buttons">
-									<button class="button button__transperant" data-toggle="modal"
-											data-target="#exampleModal"  >подбор модели</button>
-									<button class="button button__blue" data-toggle="modal"
-											data-target="#exampleModal-2" >оставить заявку</button>
-								</div>
+								<button class="button button__transperant" data-toggle="modal"
+									data-target="#exampleModal">подбор модели</button>
+								<button class="button button__blue" data-toggle="modal"
+									data-target="#exampleModal-2">оставить заявку</button>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -198,33 +203,25 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-5.jpg" class="gallery-section__image" data-fancybox="gallery-1"
-									data-caption="My caption">
+								<a href="./images/section-images/section-image-5.jpg" class="gallery-section__image"
+									data-fancybox="gallery-2" data-caption="My caption">
 									<img src="images/section-images/section-image-5.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
 								</a>
 								<div class="gallery-section__text">
 									<h3 class="gallery-section__title">Коллекция 2019 март</h3>
-									<p class="gallery-section__desc">
-										Здесь можно разместить какое-то краткое описание коллекции.
-										Какие-то красивые слова, которые будут дополнять образы, которые здесь будут
-										размещены.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-6.jpg" class="gallery-section__image" data-fancybox="gallery-2"
-									data-caption="My caption">
+								<a href="./images/section-images/section-image-6.jpg" class="gallery-section__image"
+									data-fancybox="gallery-1" data-caption="My caption">
 									<img src="images/section-images/section-image-6.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
 								</a>
 								<div class="gallery-section__text">
 									<h3 class="gallery-section__title">Коллекция 2019 март</h3>
-									<p class="gallery-section__desc">
-										Здесь можно разместить какое-то краткое описание коллекции.
-										Какие-то красивые слова, которые будут дополнять образы, которые здесь будут
-										размещены.</p>
 								</div>
 							</div>
 						</div>
@@ -233,47 +230,149 @@
 
 			</div>
 			<footer class="footer">
-					<div class="footer__logo">
-						<img src="./images/logo-white.svg" alt="logo-white">
-					</div>
-					<ul class="footer__menu">
-						<li><a href="#">Сотрудничество</a></li>
-						<li><a href="#">Наш опыт</a></li>
-						<li><a href="#">Коллекции</a></li>
-					</ul>
-					<div class="footer__contacts">
-						<p>Контакты</p>
-						<a href="#">+38 050 949 6338</a>
-					</div>
-					<ul class="footer__social">
-						<li><a href="#"><img src="./images/instagram.svg" alt="instagram"></a></li>
-						<li><a href="#"><img src="./images/whatsup.svg" alt="whatsup"></a></li>
-						<li><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
-					</ul>
-				</footer>
+				<div class="footer__logo">
+					<img src="./images/logo-white.svg" alt="logo-white">
+				</div>
+				<ul class="footer__menu">
+					<li><a href="#">Сотрудничество</a></li>
+					<li><a href="#">Наш опыт</a></li>
+					<li><a href="#">Коллекции</a></li>
+				</ul>
+				<div class="footer__contacts">
+					<p>Контакты</p>
+					<a href="#">+38 050 949 6338</a>
+				</div>
+				<ul class="footer__social">
+					<li><a href="#"><img src="./images/instagram.svg" alt="instagram"></a></li>
+					<li><a href="#"><img src="./images/whatsup.svg" alt="whatsup"></a></li>
+					<li><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
+				</ul>
+			</footer>
 		</section>
 	</div>
-		<!-- Modal -->
-		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-			aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						TEST 1
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
-					</div>
+
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Подбор модели</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
 				</div>
+				<div class="modal-body">
+					<form class="form-inline">
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref">
+							<span>Какой фасон платья Вас интересует?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+								<option selected>Choose...</option>
+								<option value="1">Пышное</option>
+								<option value="2">Рыбка</option>
+								<option value="3">А-силуэт</option>
+								<option value="4">Прямое</option>
+								<option value="5">Все</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref2">
+							<span>Открытое или закрытое платье?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref2">
+								<option selected>Choose...</option>
+								<option value="1">Открытое</option>
+								<option value="2">Закрытое</option>
+								<option value="3">Оба варианта</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">Айвори</option>
+								<option value="2">Белое</option>
+								<option value="3">Капучино</option>
+								<option value="4">Пудра</option>
+								<option value="5">Цветное</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Длинна рукава?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">Без рукава</option>
+								<option value="2">Длинный</option>
+								<option value="3">Три четверти</option>
+								<option value="4">Короткий</option>
+								<option value="5">Рукав клеш</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">Да</option>
+								<option value="2">Нет</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Нужна ли Вам накидка?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">Да</option>
+								<option value="2">Нет</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Длинна шлейфа?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="2">Короткий</option>
+								<option value="2">Без шлейфа</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Ценовая категория платья?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">$600-1000</option>
+								<option value="2">$1000-1500</option>
+								<option value="2">$1500-2000</option>
+								<option value="2">$2000-2500</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Вы являетесь?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
+								<option selected>Choose...</option>
+								<option value="1">Невеста</option>
+								<option value="2">Владелец салона</option>
+								<option value="2">Другое</option>
+							</select>
+						</label>
+						<div class="form-group">
+							<label for="exampleInputEmail1">Имя</label>
+							<input type="text" class="form-control" id="exampleInputEmail1"
+								aria-describedby="emailHelp" placeholder="Enter email">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Емейл</label>
+							<input type="email" class="form-control" id="exampleInputPassword1"
+								placeholder="Password">
+						</div>
+						<div class="form-group">
+								<label for="exampleInputPassword1">Телефон</label>
+								<input type="text" class="form-control" id="exampleInputPassword1"
+									placeholder="Password">
+						</div>
+						<div class="form-button-group">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							<button type="submit" class="btn btn-primary my-1">Submit</button>
+						</div>
+					</form>
+				</div>
+
 			</div>
 		</div>
+	</div>
 
 	<div class="modal fade" id="exampleModal-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
@@ -295,7 +394,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
+
 	<div class="modal fade" id="exampleModal-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -319,13 +418,41 @@
 	</div>
 
 	<div class="gallery-images">
-		<a href="./images/gallery-1/ABB_0019.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_0048.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_0058.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_0091.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_3825.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_3886.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
-		<a href="./images/gallery-1/ABB_3897.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0019.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0048.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0058.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_0091.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3825.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3886.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3897.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3922.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3949.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3975.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_3988.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_4016.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_4033.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_4059.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+		<a href="./images/gallery-1/ABB_8892.jpg" data-fancybox="gallery-1" data-caption="My caption"></a>
+	</div>
+
+	<div class="gallery-images">
+		<a href="./images/gallery-2/19-1-01-.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-01.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-02-.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-03.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-03==.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-04-.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-04.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-04=.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-07.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-07_.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-09-.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-09.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-09=.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-10+.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
+		<a href="./images/gallery-2/19-1-10-.jpg" data-fancybox="gallery-2" data-caption="My caption"></a>
 	</div>
 
 	<!--build:js js/main.min.js -->
