--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--build:js lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -457,6 +456,33 @@
 		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1"></a>
 		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1"></a>
 		<a href="./images/gallery-1/ABB_8892.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_8892.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_8931.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_8945.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_8999.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9048.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9155.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9193.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9213.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9241.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9444.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9469.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9508.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9520.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9540.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9594.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9614.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9633.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9651.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9660.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9692.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9780.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9789.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9817.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9824.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9946.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9953.jpg" data-fancybox="gallery-1"></a>
+		<a href="./images/gallery-1/ABB_9961.jpg" data-fancybox="gallery-1"></a>
 	</div>
 
 	<div class="gallery-images">
