--- a/app/index.html
+++ b/app/index.html
@@ -252,131 +252,6 @@
 
 
 	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Подбор модели</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<form class="form-inline" id="form-1">
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref">
-							<span>Какой фасон платья Вас интересует?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-								<option selected>Выбрать...</option>
-								<option value="1">Пышное</option>
-								<option value="2">Рыбка</option>
-								<option value="3">А-силуэт</option>
-								<option value="4">Прямое</option>
-								<option value="5">Все</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref2">
-							<span>Открытое или закрытое платье?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref2">
-								<option selected>Выбрать...</option>
-								<option value="1">Открытое</option>
-								<option value="2">Закрытое</option>
-								<option value="3">Оба варианта</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
-							<span>Какой цвет предпочитаете?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4">
-								<option selected>Выбрать...</option>
-								<option value="1">Айвори</option>
-								<option value="2">Белое</option>
-								<option value="3">Капучино</option>
-								<option value="4">Пудра</option>
-								<option value="5">Цветное</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref5">
-							<span>Длинна рукава?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref5">
-								<option selected>Выбрать...</option>
-								<option value="1">Без рукава</option>
-								<option value="2">Длинный</option>
-								<option value="3">Три четверти</option>
-								<option value="4">Короткий</option>
-								<option value="5">Рукав клеш</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref6">
-							<span>Хотели бы Вы фату?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref6">
-								<option selected>Выбрать...</option>
-								<option value="1">Да</option>
-								<option value="2">Нет</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref8">
-							<span>Нужна ли Вам накидка?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref8">
-								<option selected>Выбрать...</option>
-								<option value="1">Да</option>
-								<option value="2">Нет</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref9">
-							<span>Длинна шлейфа?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref9">
-								<option selected>Выбрать...</option>
-								<option value="2">Короткий</option>
-								<option value="2">Без шлейфа</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref10">
-							<span>Ценовая категория платья?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref10">
-								<option selected>Выбрать...</option>
-								<option value="1">$600-1000</option>
-								<option value="2">$1000-1500</option>
-								<option value="2">$1500-2000</option>
-								<option value="2">$2000-2500</option>
-							</select>
-						</label>
-						<label class="my-1 mr-2" for="inlineFormCustomSelectPref11">
-							<span>Вы являетесь?</span>
-							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref11">
-								<option selected>Выбрать...</option>
-								<option value="1">Невеста</option>
-								<option value="2">Владелец салона</option>
-								<option value="2">Другое</option>
-							</select>
-						</label>
-						<div class="form-group-wrapper">
-							<div class="form-group">
-								<label for="exampleInputName1">Имя</label>
-								<input type="text" class="form-control" id="exampleInputName1"
-									aria-describedby="emailHelp" placeholder="Введите имя">
-							</div>
-							<div class="form-group">
-								<label for="exampleInputEmail1">E-mail</label>
-								<input type="email" class="form-control" id="exampleInputEmail1"
-									placeholder="Введите E-mail">
-							</div>
-							<div class="form-group">
-								<label for="exampleInputTel1">Телефон</label>
-								<input type="text" class="form-control" id="exampleInputTel1"
-									placeholder="Введите телефон">
-							</div>
-							<div class="form-button-group">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-								<button type="submit" class="btn btn-primary my-1">Отправить</button>
-							</div>
-						</div>
-					</form>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
 	<div class="modal fade" id="exampleModal-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -388,7 +263,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<form enctype="multipart/form-data" method="post" id="form-2">
+					<form enctype="multipart/form-data" method="post" id="form-1">
 						<div class="form-group row">
 							<label for="inputName3" class="col-12 col-form-label">Имя</label>
 							<div class="col-12">
@@ -419,7 +294,7 @@
 							<label for="inputDisc3" class="col-12 col-form-label">Что хотели бы обсудить?</label>
 							<div class="col-12">
 								<input type="text" class="form-control" id="inputDisc3"
-									placeholder="Что хотели бы обсудить?" name="text">
+									placeholder="Что хотели бы обсудить?" name="discuss">
 							</div>
 						</div>
 						<div class="form-group row">
@@ -430,6 +305,140 @@
 						</div>
 					</form>
 				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Подбор модели</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="form-inline" id="form-2">
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref">
+							<span>Какой фасон платья Вас интересует?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref" 
+							name="style">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Пышное">Пышное</option>
+								<option value="Рыбка">Рыбка</option>
+								<option value="А-силуэт">А-силуэт</option>
+								<option value="Прямое">Прямое</option>
+								<option value="Все">Все</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref2">
+							<span>Открытое или закрытое платье?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref2" 
+							name="typeOfDress">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Открытое">Открытое</option>
+								<option value="Закрытое">Закрытое</option>
+								<option value="Оба варианта">Оба варианта</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref4">
+							<span>Какой цвет предпочитаете?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref4" 
+							name="color">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Айвори">Айвори</option>
+								<option value="Белое">Белое</option>
+								<option value="Капучино">Капучино</option>
+								<option value="Пудра">Пудра</option>
+								<option value="Цветное">Цветное</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref5">
+							<span>Длинна рукава?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref5"
+							name="long">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Без рукава">Без рукава</option>
+								<option value="Длинный">Длинный</option>
+								<option value="Три четверти">Три четверти</option>
+								<option value="Короткий">Короткий</option>
+								<option value="Рукав клеш">Рукав клеш</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref6">
+							<span>Хотели бы Вы фату?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref6"
+							name="veil">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Да">Да</option>
+								<option value="Нет">Нет</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref8">
+							<span>Нужна ли Вам накидка?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref8"
+							name="cape">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Да">Да</option>
+								<option value="Нет">Нет</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref9">
+							<span>Длина шлейфа?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref9"
+							name="plume">
+								<option value="Пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Короткий">Короткий</option>
+								<option value="Без шлейфа">Без шлейфа</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref10">
+							<span>Ценовая категория платья?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref10"
+							name="pricecategory">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="$600-1000">$600-1000</option>
+								<option value="$1000-1500">$1000-1500</option>
+								<option value="$1500-2000">$1500-2000</option>
+								<option value="$2000-2500">$2000-2500</option>
+							</select>
+						</label>
+						<label class="my-1 mr-2" for="inlineFormCustomSelectPref11">
+							<span>Вы являетесь?</span>
+							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref11"
+							name="person">
+								<option value="пользователь не выбрал" selected>Выбрать...</option>
+								<option value="Невеста">Невеста</option>
+								<option value="Владелец салона">Владелец салона</option>
+								<option value="Другое">Другое</option>
+							</select>
+						</label>
+						<div class="form-group-wrapper">
+							<div class="form-group">
+								<label for="exampleInputName1">Имя</label>
+								<input type="text" class="form-control" id="exampleInputName1"
+									aria-describedby="emailHelp" placeholder="Введите имя" name="name">
+							</div>
+							<div class="form-group">
+								<label for="exampleInputEmail1">E-mail</label>
+								<input type="email" class="form-control" id="exampleInputEmail1"
+									placeholder="Введите E-mail" name="email">
+							</div>
+							<div class="form-group">
+								<label for="exampleInputTel1">Телефон</label>
+								<input type="text" class="form-control" id="exampleInputTel1"
+									placeholder="Введите телефон" name="phone">
+							</div>
+							<div class="form-button-group">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+								<button type="submit" class="btn btn-primary my-1">Отправить</button>
+							</div>
+						</div>
+					</form>
+				</div>
+
 			</div>
 		</div>
 	</div>
