guess it is a finale commit

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,10 @@
 							<li data-menuanchor="secondPage"><a href="#secondPage">Cooperation</a></li>
 							<li data-menuanchor="thirdPage"><a href="#thirdPage">Our experience</a></li>
 							<li data-menuanchor="fourthPage"><a href="#fourthPage">Collections</a></li>
+							<li class="contacts-phone">
+								<a href="tel:+380509496338">+380 50 949 6338</a>
+								<a href="tel:+380501087700">+380 50 108 7700</a>
+							</li>
 						</ul>
 						<div class="language-pagination">
 							<a href="index.html" class="language-pagination-page active">ENG</a>
@@ -237,12 +241,13 @@
 				</ul>
 				<div class="footer__contacts">
 					<p>Contacts</p>
-					<a href="#">+38 050 949 6338</a>
+					<a href="tel:+380509496338">+380 50 949 6338</a>
+					<a href="tel:+380501087700">+380 50 108 7700</a>
 				</div>
 				<ul class="footer__social">
-					<li><a href="#"><img src="./images/instagram.svg" alt="instagram"></a></li>
-					<li><a href="#"><img src="./images/whatsup.svg" alt="whatsup"></a></li>
-					<li><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
+					<li><a href="https://instagram.com/sapfir_couture?igshid=ou31h2pqvh0v"><img src="./images/instagram.svg" alt="instagram"></a></li>
+					<li><a href="tel:+380509496338"><img src="./images/whatsup.svg" alt="whatsup"></a></li>
+					<li><a href="https://www.facebook.com/Sapfir-couture-387587695212713/"><img src="./images/facebook.svg" alt="facebook"></a></li>
 				</ul>
 			</footer>
 		</section>
