--- a/app/index_ru.html
+++ b/app/index_ru.html
@@ -60,6 +60,10 @@
 							<li data-menuanchor="secondPage"><a href="#secondPage">Сотрудничество</a></li>
 							<li data-menuanchor="thirdPage"><a href="#thirdPage">Наш опыт</a></li>
 							<li data-menuanchor="fourthPage"><a href="#fourthPage">Коллекции</a></li>
+							<li class="contacts-phone">
+								<a href="#">+38 050 949 6338</a>
+								<a href="#">+380 50 108 7700</a>
+							</li>
 						</ul>
 						<div class="language-pagination">
 							<a href="index.html" class="language-pagination-page">ENG</a>
@@ -244,6 +248,7 @@
 				<div class="footer__contacts">
 					<p>Контакты</p>
 					<a href="#">+38 050 949 6338</a>
+					<a href="#">+380 50 108 7700</a>
 				</div>
 				<ul class="footer__social">
 					<li><a href="#"><img src="./images/instagram.svg" alt="instagram"></a></li>
